vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__function_missing_return_clause.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
function f(a : integer);

== tree ==
SubprogramDeclaration
  FunctionSpecification
    Keyword(Function)
    Identifier 'f'
    ParameterList
      ParenthesizedInterfaceList
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'a'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'integer'
        RightPar
  SemiColon

== diagnostics ==
1:24 expected 'return'
1:24 expected Name
