vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__function_unclosed_parameter_list.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
function f(a : integer return integer;

== tree ==
SubprogramDeclaration
  FunctionSpecification
    Keyword(Function)
    Identifier 'f'
    ParameterList
      ParenthesizedInterfaceList
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'a'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'integer'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'integer'
  SemiColon

== diagnostics ==
1:23 expected ')'
