vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parse_procedure_spec_with_header_no_aspect.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_declaration,\n\"\\\nprocedure my_proc\n    generic (x: natural := 4; y: real := 4);\")"
---
SubprogramDeclaration
  ProcedureSpecification
    Keyword(Procedure)
    Identifier 'my_proc'
    SubprogramHeader
      SubprogramHeaderGenericClause
        Keyword(Generic)
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'x'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'natural'
            InitialValue
              ColonEq
              LiteralExpression
                AbstractLiteral '4'
          SemiColon
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'y'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'real'
            InitialValue
              ColonEq
              LiteralExpression
                AbstractLiteral '4'
        RightPar
  SemiColon
