vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parse_subprogram_header_with_aspect.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_header,\n\"generic (x: natural := 1; y: real) generic map (x => 2, y => 0.4)\")"
---
SubprogramHeader
  SubprogramHeaderGenericClause
    Keyword(Generic)
    LeftPar
    InterfaceList
      InterfaceObjectDeclaration
        IdentifierList
          Identifier 'x'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'natural'
        ColonEq
        LiteralExpression
          AbstractLiteral '1'
      SemiColon
      InterfaceObjectDeclaration
        IdentifierList
          Identifier 'y'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'real'
    RightPar
  GenericMapAspect
    Keyword(Generic)
    Keyword(Map)
    LeftPar
    AssociationList
      AssociationElement
        Formal
          FormalPart
            Name
              NameDesignatorPrefix
                Identifier 'x'
          RightArrow
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '2'
      Comma
      AssociationElement
        Formal
          FormalPart
            Name
              NameDesignatorPrefix
                Identifier 'y'
          RightArrow
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '0.4'
    RightPar
