vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_function_specification.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_declaration,\n\"function foo return lib.foo.natural;\")"
---
SubprogramDeclaration
  FunctionSpecification
    Keyword(Function)
    Identifier 'foo'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'natural'
  SemiColon
