vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_function_specification_operator.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_declaration,\n\"function \\\"+\\\" return lib.foo.natural;\")"
---
SubprogramDeclaration
  FunctionSpecification
    Keyword(Function)
    StringLiteral '"+"'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'natural'
  SemiColon
